<?xml version="1.0"?>
<package format="2">
    <name>inverted_pendulum_sim</name>
    <version>0.0.0</version>
    <description>The inverted_pendulum_sim package</description>

    <maintainer email="yogesh.phalak@octobotics.tech">Yogesh_Phalak</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
